--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -31,3 +31,25 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Scroll bar stylings */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #222; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
